# seedlot-selection-tool

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  appspec.yml  babel.cfg  buildspec.yml  config_example.json  docker-compose.yaml  gulpfile.babel.js  package.json  pyproject.toml
CodeDeploy/: AfterInstall-root.sh  AfterInstall.sh  BeforeInstall.sh
ansible/: README.md  deploy.yml  post_deploy.yml  setup_webservers.yml
ansible/resources/: aws_credentials  celery.service  gunicorn.service  mbtileserver.service  nginx.conf
docs/: Makefile  conf.py  dev-setup.md  import-data.md  index.rst  make.bat  production-setup.md
docs/setup/: add-data.rst  index.rst  install.rst
javascript/: .babelrc  .eslintrc.js  .prettierrc.json  extract-messages.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  webpack.common.babel.js  webpack.config.babel.js  webpack.dev.babel.js  webpack.prod.babel.js
javascript/images/: declarations.d.ts
javascript/loaders/: jison-loader.js
javascript/locales/es/: seedlot-selection-tool.po
javascript/locales/es-mx/: sst-js.po
javascript/locales/es_MX/: sst-js-merged.po  sst-js-mt.po  sst-js.po
javascript/scss/: seedsource.scss  sst.scss  variables.scss
javascript/src/: config.ts  index.tsx
javascript/src/components/: About.tsx  Menu.tsx
javascript/src/components/IntroTour/: IntroTour.scss  IntroTour.tsx  StyledButton.tsx  TourContent.tsx
javascript/src/seedsource/: config.js
javascript/src/seedsource-ui/: config.ts  declarations.d.ts  io.ts  leaflet-controls.ts  resync.ts  utils.ts
javascript/src/seedsource-ui/actions/: auth.ts  climate.ts  constraints.ts  customFunctions.ts  customLayers.ts  error.ts  job.ts  layers.ts  legends.ts  map.ts  objectives.ts  point.ts  popup.ts  region.ts  report.ts  saves.ts  species.ts  step.ts  tabs.ts  traits.ts  variables.ts  zones.ts
javascript/src/seedsource-ui/async/: customFunctions.ts  legends.ts  point.ts  popup.ts  traits.ts  utils.ts  variables.ts  zones.ts
javascript/src/seedsource-ui/components/: AccountSettingsModal.tsx  AnnouncementModal.tsx  App.tsx  ConstraintChooser.tsx  ConstraintChooserItem.tsx  Dropdown.tsx  EditableLabel.tsx  GroupedButton.tsx  LoginModal.tsx  Modal.tsx  ModalCard.tsx  NavItemDropdown.tsx  Navbar.tsx  Popup.tsx  ResetPasswordModal.tsx  ShareURL.tsx  SignupModal.tsx  SocialLogin.tsx  TraitStep.tsx
javascript/src/seedsource-ui/containers/: AccountMenu.tsx  ClimateStep.tsx  ColorPicker.tsx  Comparisons.tsx  ConfigurationStep.tsx  Constraint.tsx  ConstraintStep.tsx  CustomFunction.tsx  CustomFunctionModal.tsx  CustomFunctionStep.tsx  Layers.tsx  (+34 more)
js/seedsource/components/: About.jsx  Menu.jsx
locale/: seedsource.pot
locale/es/LC_MESSAGES/: django.mo  django.po
locales/es-mx/LC_MESSAGES/: django.po
locales/es_MX/LC_MESSAGES/: django.po
manual/: build-manual.sh  index.adoc  po4a.cfg
manual/locale/: manual.pot
manual/locale/es_MX/: manual-mt.po  manual.po
manual/sections/: 01-objective.adoc  02-location.adoc  03-region.adoc  04-climate.adoc  05-transfer.adoc  06-variables.adoc  07-constraints.adoc  08-results.adoc  appendix.adoc
manual/translations/es_MX/: index.adoc
sass/: seedsource.scss
services/: server.dockerfile  worker.dockerfile
source/: manage.py
source/sst/: middleware.py
source/sst_project/: celery.py  context_processors.py  settings.py  storage.py  urls.py  wsgi.py
source/sst_project/settings/: __init__.py  base.py  config.py  custom.py  local.py  production.py
(+122 files in other folders)
